--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8" />
-  <title>Snake Game with Start Button</title>
+  <title>Snake Game with Custom Game Over and Victory Screens</title>
   <style>
     * {
       box-sizing: border-box;
@@ -19,6 +19,7 @@
       font-family: sans-serif;
       overflow: hidden;
       position: relative;
+      color: white;
     }
 
     #game-container {
@@ -32,6 +33,7 @@
         linear-gradient(90deg, #444 1px, transparent 1px);
       background-size: 20px 20px;
       user-select: none;
+      z-index: 1;
     }
 
     .snake-part, .food {
@@ -58,14 +60,12 @@
       align-items: center;
     }
 
-    /* Eyes container */
     .snake-head .eyes {
       position: relative;
       width: 14px;
       height: 14px;
     }
 
-    /* Eyes */
     .eye {
       position: absolute;
       width: 5px;
@@ -85,7 +85,6 @@
       right: 0;
     }
 
-    /* Pupils */
     .pupil {
       width: 2px;
       height: 2px;
@@ -97,7 +96,6 @@
       transition: all 0.2s ease;
     }
 
-    /* Tongue */
     .tongue {
       position: absolute;
       width: 4px;
@@ -112,13 +110,11 @@
       transition: all 0.2s ease;
     }
 
-    /* Flicker animation */
     @keyframes flicker {
       0%, 100% { transform: rotate(0deg); }
       50% { transform: rotate(15deg); }
     }
 
-    /* Food style */
     .food {
       background-color: #ff2d55;
       border-radius: 50%;
@@ -139,12 +135,19 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      color: #fff;
       font-size: 20px;
       z-index: 2;
     }
 
-    /* Start button styles */
+    #timer {
+      position: absolute;
+      top: 50px;
+      left: 20px;
+      font-size: 18px;
+      z-index: 2;
+      color: #eee;
+    }
+
     #start-overlay {
       position: absolute;
       top: 0;
@@ -175,21 +178,110 @@
     #start-button:hover {
       background: #2980b9;
     }
+
+    /* Overlay styles for Victory and Game Over */
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      user-select: none;
+      text-align: center;
+      padding: 20px;
+      font-size: 36px;
+      font-weight: bold;
+      color: white;
+    }
+
+    #victory-overlay {
+      background: radial-gradient(circle, #ffecb3, #f2a365);
+      color: #4a2c00;
+    }
+
+    #gameover-overlay {
+      background: radial-gradient(circle, #7f0000, #b22222);
+      color: #ffcccc;
+    }
+
+    /* Dancing cat animation */
+    #dancing-cat {
+      font-size: 100px;
+      animation: dance 1s infinite alternate ease-in-out;
+      margin-top: 20px;
+    }
+
+    @keyframes dance {
+      0% { transform: translateY(0) rotate(0deg); }
+      50% { transform: translateY(-20px) rotate(10deg); }
+      100% { transform: translateY(0) rotate(0deg); }
+    }
+
+    /* Buttons on overlays */
+    .overlay-button {
+      margin-top: 30px;
+      font-size: 24px;
+      padding: 12px 30px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow: 0 0 12px #00000088;
+      transition: background 0.3s ease;
+    }
+
+    #try-again-button {
+      background: #27ae60;
+      color: white;
+    }
+
+    #try-again-button:hover {
+      background: #1e8449;
+    }
+
+    #gameover-try-again-button {
+      background: #c0392b;
+      color: white;
+    }
+
+    #gameover-try-again-button:hover {
+      background: #922b21;
+    }
+
   </style>
 </head>
 <body>
   <div id="score">Score: 0</div>
+  <div id="timer">Time since last apple: 0s</div>
   <div id="game-container">
     <div id="start-overlay">
       <button id="start-button">Start Game</button>
     </div>
   </div>
 
+  <div id="victory-overlay" class="overlay" style="display:none;">
+    <div>GOOD JOB!<br>YOU FINISHED AND YOU'RE THE FIRST IN HISTORY!</div>
+    <div id="dancing-cat">🐱💃</div>
+    <button id="try-again-button" class="overlay-button">Try Again</button>
+  </div>
+
+  <div id="gameover-overlay" class="overlay" style="display:none;">
+    <div>GAME OVER!<br>Better luck next time.</div>
+    <button id="gameover-try-again-button" class="overlay-button">Try Again</button>
+  </div>
+
   <script>
     const container = document.getElementById('game-container');
     const scoreDisplay = document.getElementById('score');
+    const timerDisplay = document.getElementById('timer');
     const startOverlay = document.getElementById('start-overlay');
     const startButton = document.getElementById('start-button');
+    const victoryOverlay = document.getElementById('victory-overlay');
+    const tryAgainButton = document.getElementById('try-again-button');
+    const gameoverOverlay = document.getElementById('gameover-overlay');
+    const gameoverTryAgainButton = document.getElementById('gameover-try-again-button');
 
     const gridSize = 20;
     const tileSize = 20;
@@ -207,6 +299,17 @@
     let currentSpeed = normalSpeed;
     let gameInterval;
     let gameStarted = false;
+
+    // For win condition timing
+    let lastAppleTime = null;
+    let applesEatenInRow = 0;
+    const timeLimitSeconds = 15;
+    const applesNeeded = 5;
+
+    const maxApples = 20; // Regular game ending apples needed
+
+    // Timer interval
+    let timerInterval;
 
     function createSegment(className = 'snake-part') {
       const part = document.createElement('div');
@@ -308,6 +411,22 @@
       });
     }
 
+    function showGameOver() {
+      gameoverOverlay.style.display = 'flex';
+    }
+
+    function endGame(message, isWin = false) {
+      gameStarted = false;
+      clearInterval(gameInterval);
+      clearInterval(timerInterval);
+
+      if (isWin) {
+        victoryOverlay.style.display = 'flex';
+      } else {
+        showGameOver();
+      }
+    }
+
     function moveSnake() {
       if (!gameStarted) return;
       if (direction.x === 0 && direction.y === 0) return;
@@ -320,8 +439,7 @@
         newHead.x >= gridSize || newHead.y >= gridSize ||
         snake.some(s => s.x === newHead.x && s.y === newHead.y)
       ) {
-        alert('Game Over! Score: ' + score);
-        location.reload();
+        endGame('Game Over! You hit a wall or yourself. Score: ' + score);
         return;
       }
 
@@ -331,8 +449,31 @@
       if (newHead.x === food.x && newHead.y === food.y) {
         score++;
         scoreDisplay.textContent = 'Score: ' + score;
+
+        // Handle timing for apples in a row
+        const now = Date.now();
+
+        if (lastAppleTime === null || (now - lastAppleTime) / 1000 <= timeLimitSeconds) {
+          applesEatenInRow++;
+        } else {
+          // Too slow, reset streak
+          applesEatenInRow = 1;
+        }
+        lastAppleTime = now;
+
         placeFood();
         activateSpeedBoost();
+
+        if (applesEatenInRow >= applesNeeded) {
+          endGame('You win! You ate 5 apples in under 15 seconds!', true);
+          return;
+        }
+
+        if (score >= maxApples) {
+          endGame('Game Over! You reached 20 apples.');
+          return;
+        }
+
       } else {
         snake.pop();
       }
@@ -357,14 +498,42 @@
       }, 2000);
     }
 
+    function startTimer() {
+      timerDisplay.textContent = `Time since last apple: 0s`;
+
+      timerInterval = setInterval(() => {
+        if (!lastAppleTime) return;
+        const elapsed = Math.floor((Date.now() - lastAppleTime) / 1000);
+        timerDisplay.textContent = `Time since last apple: ${elapsed}s`;
+
+        // If time goes past 15s, reset apples in a row streak
+        if (elapsed > timeLimitSeconds) {
+          applesEatenInRow = 0;
+          lastAppleTime = null;
+          timerDisplay.textContent = `Time since last apple: 0s`;
+        }
+      }, 500);
+    }
+
     startButton.addEventListener('click', () => {
       gameStarted = true;
       startOverlay.style.display = 'none';
-      direction = { x: 1, y: 0 }; // start moving right immediately
+      direction = { x: 1, y: 0 };
       resetGameInterval();
+
+      lastAppleTime = Date.now();
+      applesEatenInRow = 0;
+      startTimer();
     });
 
-    // Prevent movement before game start
+    tryAgainButton.addEventListener('click', () => {
+      location.reload();
+    });
+
+    gameoverTryAgainButton.addEventListener('click', () => {
+      location.reload();
+    });
+
     window.addEventListener('keydown', e => {
       if (!gameStarted) return;
 
@@ -386,7 +555,6 @@
 
     placeFood();
     drawSnake();
-    // No interval until start button clicked
   </script>
 </body>
 </html>
